# area_labeling

./: .gitignore  .travis.yml  README.md
data/: data.json
lib/: CMakeLists.txt  label_fit.hpp  py_label_fit.cpp
lib/c_circle_apx/: CMakeLists.txt  circle_apx.cpp  circle_apx.hpp  py_circle_apx.cpp
lib/c_label_fit/: CMakeLists.txt  label_fit.cpp
lib/c_paths/: CMakeLists.txt  longest_paths.cpp  longest_paths.hpp  py_longest_paths.cpp
lib/c_segments_to_graph/: CMakeLists.txt  py_segments_to_graph.cpp  segments_to_graph.cpp  segments_to_graph.hpp
lib/python/: circle_apx.py  circle_fit.py  label_fit.py  paths.py  skeleton.py  util.py
standalone_lib/: CMakeLists.txt  README.MD
standalone_lib/lib/: CMakeLists.txt  liblabeling.cpp
standalone_lib/lib/include/: liblabeling.h
web-gui/: index.html  lib  server.py
web-gui/scripts/: area.js  arealabel.js  canvas.js  io.js  live_label_demo.js  poi.js  primitives.js  projection.js
web-gui/templates/: index.html
